style.css
:root {
  --primary-bg-color: hsl(222, 26%, 31%);
  --output-bg-color: hsl(224, 36%, 15%);
  --calculator-bg-color: hsl(223, 31%, 20%);
  --text-color: #ffffff;
  --dark-text-color: hsl(221, 14%, 31%);
  --button-color: hsl(30, 25%, 89%);
  --button-shadow: hsl(28, 16%, 65%);
  --reset-button-color: hsl(225, 21%, 49%);
  --reset-button-shadow: hsl(224, 28%, 35%);
  --reset-button-hover: hsl(225, 51%, 76%);
  --equals-button-color: hsl(6, 63%, 50%);
  --equals-button-shadow: hsl(6, 70%, 34%);
  --equals-button-hover: hsl(6, 93%, 76%);
  --button-text-color: #ffffff;
  --attribution-color: #f5f5f5;
  --attribution-link-color: turquoise;
}

* {
  box-sizing: border-box;
}

body {
  background-color: var(--primary-bg-color);
  font-family: "League Spartan", sans-serif;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  width: 327px;
  margin-inline: auto;
}

body p,
h1,
h2,
h3,
a {
  padding: 0;
  margin: 0;
}

header {
  color: var(--text-color);
  width: 100%;
  margin-top: 30px;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
}

.logo {
  font-size: 32px;
  line-height: auto;
  font-weight: bold;
  letter-spacing: -0.53px;
}

.input-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  width: 146px;
}

.input-theme {
  margin-left: 1px;
  font-size: 12px;
  line-height: auto;
  letter-spacing: 1px;
  text-transform: uppercase;
  margin-bottom: 6px;
}

.numbers-and-slider {
  display: flex;
  flex-direction: column;
}

.input-numbers {
  display: flex;
  flex-direction: row;
  font-size: 12px;
  justify-content: space-between;
  padding-inline: 4px;
}

.input-numbers p {
  flex: 1;
  text-align: center;
}

#theme-slider {
  width: 71px;
  height: 26px;
  border-radius: 13px;
  background-color: var(--calculator-bg-color);
  padding-inline: 5px;
  -webkit-appearance: none;
  appearance: none;
}

#theme-slider:hover {
  cursor: pointer;
}

/* Style the slider thumb (toggle button) for WebKit (Chrome, Safari) */
#theme-slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: var(--equals-button-color);
}

/* Style the slider thumb (toggle button) for Gecko (Firefox) */
#theme-slider::-moz-range-thumb {
  width: 16px;
  height: 16px;
  border: none;
  border-radius: 50%;
  background-color: var(--equals-button-color);
}

#theme-slider::-webkit-slider-thumb:hover {
  cursor: pointer;
  background-color: var(--equals-button-hover);
}

#theme-slider::-moz-range-thumb:hover {
  cursor: pointer;
  background-color: var(--equals-button-hover);
}

#output {
  height: 88px;
  width: 100%;
  margin-top: 32px;
  font-size: 40px;
  line-height: 40px;
  padding: 24px;
  letter-spacing: -0.93px;
  text-align: right;
  border-radius: 10px;
  color: var(--text-color);
  background-color: var(--output-bg-color);
}

@media screen and (min-width: 768px) {
  body {
    width: 540px;
  }
  header {
    margin-top: 98px;
  }
  #output {
    height: 128px;
    padding: 24px;
    font-size: 56px;
    line-height: 56px;
    padding: 40px 32px 32px;
  }
}

.calculator {
  display: grid;
  grid-template-rows: repeat(5, 1fr);
  grid-template-columns: repeat(4, 1fr);
  gap: 13px;
  width: 100%;
  padding: 24px;
  margin-top: 24px;
  border-radius: 10px;
  background-color: var(--calculator-bg-color);
}

.calculator button {
  font-family: inherit;
  font-size: 32px;
  line-height: 32px;
  height: 64px;
  text-align: center;
  padding-top: 4px;
  color: var(--dark-text-color);
  background-color: var(--button-color);
  border: none;
  border-radius: 10px;
  box-shadow: inset 0 -4px var(--button-shadow);
}

.calculator button:hover {
  cursor: pointer;
  background-color: white;
}

#del-button {
  letter-spacing: -0.47px;
}

#reset-button {
  grid-column-start: 1;
  grid-column-end: 3;
}

#del-button,
#reset-button {
  font-size: 20px;
  color: var(--button-text-color);
  background-color: var(--reset-button-color);
  box-shadow: inset 0 -4px var(--reset-button-shadow);
}

#del-button:hover,
#reset-button:hover {
  cursor: pointer;
  background-color: var(--reset-button-hover);
}

#equals-button {
  grid-column-start: 3;
  grid-column-end: 5;
  background-color: var(--equals-button-color);
  box-shadow: inset 0 -4px var(--equals-button-shadow);
}

#equals-button:hover {
  cursor: pointer;
  background-color: var(--equals-button-hover);
}

@media screen and (min-width: 768px) {
  .calculator {
    padding: 32px;
    gap: 24px;
  }
  .calculator button {
    font-size: 40px;
    line-height: 40px;
  }
  #del-button,
  #reset-button {
    font-size: 28px;
  }
}

.attribution {
  font-size: 11px;
  text-align: center;
  color: var(--text-color);
}

.attribution a {
  color: var(--attribution-link-color);
}

